# thesis-seizure-prediction

./: .gitignore  LICENSE  README.md  config.toml  environment.yaml  preprocessing_pipeline.sh  pyproject.toml
src/: config.py  dashboard.py  datatypes.py  logger.py  utils.py
src/model/: attentionPooling.py  cbam.py  class_labels.py  data.py  early_stopping.py  efficientNetB0.py  gated.py  loocv.py  metrics_utils.py  multimodalseizuremodel.py  train.py
src/model/classification/: cbam.py  concat_model.py  efficientnet.py  multi_seizure_model.py  uni_seizure_model.py
src/model/fusion/: attention_pooling.py  gated_fusion.py  gated_fusion2D.py
src/preprocessing/: bispectrum_branch.py  check_mosaic.py  data_cleaning.py  data_transformation.py  eeg_to_spectrogram.py  loaders.py  read_specs.py  run_bispectrum_pipeline.py  run_precompute_stfts_pipeline.py  run_tf_pipeline.py  run_time_frequency_pipeline.py  time_frequency_branch.py  timefrequency_branch.py
