[project]
name = "thesis-seizure-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "higher-spectrum>=0.3.0",
    "jupyterlab>=4.4.9",
    "jupyterlab-vim>=4.1.4",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.6",
    "mne>=1.10.1",
    "natsort>=8.4.0",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "prettytable>=3.16.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "toml>=0.10.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
